# docspyre-ai

./: .gitignore  README.md  docker-compose.yml  litellm-config.yaml  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: Dockerfile  pyproject.toml  start.sh
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: __init__.py  documents.py  users.py
apps/backend/app/core/: config.py
apps/backend/app/schemas/: __init__.py  document.py  user.py
apps/backend/docspyre_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/database/: alembic.ini  init_db.py  pyproject.toml
apps/database/alembic/: env.py
apps/database/alembic/versions/: d57368641f9a_initial_schema.py
apps/database/db/: __init__.py  config.py  connection.py
apps/database/db/entities/: __init__.py  base.py  document.py  document_content.py  document_conversion.py  document_status.py  role.py  subscription_plan.py  template.py  transcription.py  translation.py  user.py  user_profile.py  workspace.py  workspace_member.py
apps/database/db/functions/: __init__.py  functions.sql
apps/database/db/triggers/: __init__.py  triggers.sql
apps/database/docspyre_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: Dockerfile  README.md  eslint.config.js  middleware.ts  nginx.conf  package.json  tailwind.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ai-tools/: layout.tsx  page.tsx
apps/web/app/audio-video/: layout.tsx  page.tsx
apps/web/app/billing/: page.tsx
apps/web/app/document-tools/: layout.tsx  page.tsx
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: main.rs
documents/: containerization.md
(+125 files in other folders)
