[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docspyre-backend"
version = "0.1.0"
description = "FastAPI backend for Docspyre AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.1",
    "pydantic>=2.7.4",
    "email-validator>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
