[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docspyre-database"
version = "0.1.0"
description = "Postgres database schema, entities, triggers, functions and migrations for Docspyre AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db*"]
